[package]
name = "cc-remote"
version = "0.1.0"
authors = ["Yibo Cao <cyb@ieee.org>"]
edition = "2021"

[features]
plethora = []
dump_traffic = []

[dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync"] }
tokio-tungstenite = "0"
abort-on-drop = "0"
ordered-float = "4"
futures-util = "0"
num-traits = "0"
serde_json = "1"
socket2 = "0"
flexstr = "0"
serde = { version = "1", features = ["derive"] }
fnv = "1"
hex = "0"
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tui-textarea = "0.6.1"
regex = "1.10.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
